--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 </head>
 
 <body>
-
-    <div class="wrapper">
-        Alles<br> Gute<br> Thomas!
+    <div class="fix">
+        <div class="wrapper">
+            Alles<br> Gute<br> Thomas!
+        </div>
     </div>
-
     <script src="logic.js"></script>
 
 </body>
