--- a/index.html
+++ b/index.html
@@ -4,26 +4,35 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Happy Birthday</title>
 
-    <link rel="apple-touch-icon" sizes="180x180" href="favi/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favi/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favi/favicon-16x16.png">
-    <link rel="manifest" href="favi/site.webmanifest">
-    <link rel="mask-icon" href="favi/safari-pinned-tab.svg" color="#5bbad5">
-    <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="theme-color" content="#ffffff">
+    <title>Bookmarks</title>
 
-    <link href="style.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500" rel="stylesheet">
+
+    <script src="js/jquery-3.2.1.min.js"></script>
+
 </head>
 
 <body>
-    <div class="fix">
-        <div class="wrapper">
-            Alles<br> Gute<br> Thomas!
+
+    <picture class="background-picture">
+        <source srcset="source/img/width_1920/city_night.jpg" media="(max-width: 1920px)">
+        <source srcset="source/img/width_2560/city_night.jpg" media="(max-width: 2560px)">
+        <source srcset="source/img/width_max/city_night.jpg" media="(min-width: 2561px)">
+        <img src="">
+    </picture>
+
+    <input id="searchBox" type="text" placeholder="Engage!" autofocus>
+
+    <div class="position-Helper">
+        <div class="scrollbox-Cover">
+            <div class="bookmarksWrapper"></div>
         </div>
     </div>
-    <script src="logic.js"></script>
+
+    <script src="js/loadAndSizeBookmarks.js"></script>
+    <script src="js/logicInGeneral.js"></script>
 
 </body>
 
