new poition dot

--- a/index.html
+++ b/index.html
@@ -12028,10 +12028,22 @@ var $author$project$Main$myIframe = $mdgriffith$elm_ui$Element$html(
 				A2($elm$html$Html$Attributes$style, 'margin', '0'),
 				A2($elm$html$Html$Attributes$style, 'border', '0'),
 				A2($elm$html$Html$Attributes$style, 'content', '0'),
-				$elm$html$Html$Attributes$srcdoc('<iframe width=\'895\' height=\'506\' src=\'https://www.youtube.com/embed/RxjLwsbTzMc\' frameborder=\'0\' allow=\'accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\' allowfullscreen></iframe>')
+				$elm$html$Html$Attributes$srcdoc('<iframe width=\'available\' height=\'available\' src=\'https://www.youtube.com/embed/RxjLwsbTzMc\' frameborder=\'0\' allow=\'accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\' allowfullscreen></iframe>')
 			]),
 		_List_Nil));
 var $mdgriffith$elm_ui$Element$none = $mdgriffith$elm_ui$Internal$Model$Empty;
+var $mdgriffith$elm_ui$Internal$Model$OnRight = {$: 'OnRight'};
+var $mdgriffith$elm_ui$Element$createNearby = F2(
+	function (loc, element) {
+		if (element.$ === 'Empty') {
+			return $mdgriffith$elm_ui$Internal$Model$NoAttribute;
+		} else {
+			return A2($mdgriffith$elm_ui$Internal$Model$Nearby, loc, element);
+		}
+	});
+var $mdgriffith$elm_ui$Element$onRight = function (element) {
+	return A2($mdgriffith$elm_ui$Element$createNearby, $mdgriffith$elm_ui$Internal$Model$OnRight, element);
+};
 var $mdgriffith$elm_ui$Internal$Model$paddingName = F4(
 	function (top, right, bottom, left) {
 		return 'pad-' + ($elm$core$String$fromInt(top) + ('-' + ($elm$core$String$fromInt(right) + ('-' + ($elm$core$String$fromInt(bottom) + ('-' + $elm$core$String$fromInt(left)))))));
@@ -12070,40 +12082,6 @@ var $mdgriffith$elm_ui$Internal$Model$Px = function (a) {
 	return {$: 'Px', a: a};
 };
 var $mdgriffith$elm_ui$Element$px = $mdgriffith$elm_ui$Internal$Model$Px;
-var $mdgriffith$elm_ui$Internal$Model$formatTextShadow = function (shadow) {
-	return A2(
-		$elm$core$String$join,
-		' ',
-		_List_fromArray(
-			[
-				$elm$core$String$fromFloat(shadow.offset.a) + 'px',
-				$elm$core$String$fromFloat(shadow.offset.b) + 'px',
-				$elm$core$String$fromFloat(shadow.blur) + 'px',
-				$mdgriffith$elm_ui$Internal$Model$formatColor(shadow.color)
-			]));
-};
-var $mdgriffith$elm_ui$Internal$Model$textShadowClass = function (shadow) {
-	return $elm$core$String$concat(
-		_List_fromArray(
-			[
-				'txt',
-				$mdgriffith$elm_ui$Internal$Model$floatClass(shadow.offset.a) + 'px',
-				$mdgriffith$elm_ui$Internal$Model$floatClass(shadow.offset.b) + 'px',
-				$mdgriffith$elm_ui$Internal$Model$floatClass(shadow.blur) + 'px',
-				$mdgriffith$elm_ui$Internal$Model$formatColorClass(shadow.color)
-			]));
-};
-var $mdgriffith$elm_ui$Internal$Flag$txtShadows = $mdgriffith$elm_ui$Internal$Flag$flag(18);
-var $mdgriffith$elm_ui$Element$Font$shadow = function (shade) {
-	return A2(
-		$mdgriffith$elm_ui$Internal$Model$StyleClass,
-		$mdgriffith$elm_ui$Internal$Flag$txtShadows,
-		A3(
-			$mdgriffith$elm_ui$Internal$Model$Single,
-			$mdgriffith$elm_ui$Internal$Model$textShadowClass(shade),
-			'text-shadow',
-			$mdgriffith$elm_ui$Internal$Model$formatTextShadow(shade)));
-};
 var $author$project$Main$pageContent = function () {
 	var eve = 400;
 	return A2(
@@ -12119,15 +12097,19 @@ var $author$project$Main$pageContent = function () {
 						$mdgriffith$elm_ui$Element$centerX,
 						$mdgriffith$elm_ui$Element$Font$color(
 						A3($mdgriffith$elm_ui$Element$rgb255, 234, 175, 65)),
-						$mdgriffith$elm_ui$Element$Font$shadow(
-						{
-							blur: 10,
-							color: A3($mdgriffith$elm_ui$Element$rgb255, 0, 25, 18),
-							offset: _Utils_Tuple2(10, 17)
-						}),
-						$mdgriffith$elm_ui$Element$Font$size(eve)
+						$mdgriffith$elm_ui$Element$Font$size(eve),
+						$mdgriffith$elm_ui$Element$onRight(
+						A2(
+							$mdgriffith$elm_ui$Element$el,
+							_List_fromArray(
+								[
+									$mdgriffith$elm_ui$Element$Font$color(
+									A3($mdgriffith$elm_ui$Element$rgb255, 234, 175, 65)),
+									$mdgriffith$elm_ui$Element$Font$size(eve)
+								]),
+							$mdgriffith$elm_ui$Element$text('.')))
 					]),
-				$mdgriffith$elm_ui$Element$text('24.')),
+				$mdgriffith$elm_ui$Element$text('24')),
 				A2(
 				$mdgriffith$elm_ui$Element$el,
 				_List_fromArray(
@@ -12137,7 +12119,7 @@ var $author$project$Main$pageContent = function () {
 						A3($mdgriffith$elm_ui$Element$rgb255, 234, 175, 65)),
 						$mdgriffith$elm_ui$Element$Font$size(45),
 						$mdgriffith$elm_ui$Element$moveUp(30),
-						$mdgriffith$elm_ui$Element$moveRight(123)
+						$mdgriffith$elm_ui$Element$moveRight(200)
 					]),
 				$mdgriffith$elm_ui$Element$text('Türchen')),
 				A2(
@@ -12145,8 +12127,10 @@ var $author$project$Main$pageContent = function () {
 				_List_fromArray(
 					[
 						$mdgriffith$elm_ui$Element$centerX,
-						$mdgriffith$elm_ui$Element$width($mdgriffith$elm_ui$Element$shrink),
-						$mdgriffith$elm_ui$Element$height($mdgriffith$elm_ui$Element$shrink),
+						$mdgriffith$elm_ui$Element$width(
+						$mdgriffith$elm_ui$Element$px(530)),
+						$mdgriffith$elm_ui$Element$height(
+						$mdgriffith$elm_ui$Element$px(895)),
 						$mdgriffith$elm_ui$Element$paddingEach(
 						{bottom: 105, left: 0, right: 0, top: 70})
 					]),
@@ -12196,8 +12180,8 @@ var $author$project$Main$main = $elm$browser$Browser$application(
 	{init: $author$project$Main$init, onUrlChange: $author$project$Main$UrlChanged, onUrlRequest: $author$project$Main$LinkClicked, subscriptions: $author$project$Main$subscriptions, update: $author$project$Main$update, view: $author$project$Main$view});
 _Platform_export({'Main':{'init':$author$project$Main$main($elm$json$Json$Decode$int)(0)}});}(this));
 
-  var app = Elm.Main.init({ node: document.getElementById("elm") ,
-flags: 10});
+  var app = Elm.Main.init({ node: document.getElementById("elm"),
+flags: 10 });
 }
 catch (e)
 {
