--- a/index.html
+++ b/index.html
@@ -11420,6 +11420,14 @@ var $mdgriffith$elm_ui$Element$el = F2(
 				_List_fromArray(
 					[child])));
 	});
+var $mdgriffith$elm_ui$Internal$Model$Max = F2(
+	function (a, b) {
+		return {$: 'Max', a: a, b: b};
+	});
+var $mdgriffith$elm_ui$Element$maximum = F2(
+	function (i, l) {
+		return A2($mdgriffith$elm_ui$Internal$Model$Max, i, l);
+	});
 var $mdgriffith$elm_ui$Internal$Model$MoveX = function (a) {
 	return {$: 'MoveX', a: a};
 };
@@ -12022,13 +12030,13 @@ var $author$project$Main$myIframe = $mdgriffith$elm_ui$Element$html(
 			[
 				A2($elm$html$Html$Attributes$style, 'width', 'fill'),
 				A2($elm$html$Html$Attributes$style, 'border-style', 'solid'),
-				A2($elm$html$Html$Attributes$style, 'height', '530'),
-				A2($elm$html$Html$Attributes$style, 'width', '895'),
+				A2($elm$html$Html$Attributes$style, 'height', '400'),
+				A2($elm$html$Html$Attributes$style, 'width', '665'),
 				A2($elm$html$Html$Attributes$style, 'patting', '0'),
 				A2($elm$html$Html$Attributes$style, 'margin', '0'),
 				A2($elm$html$Html$Attributes$style, 'border', '0'),
 				A2($elm$html$Html$Attributes$style, 'content', '0'),
-				$elm$html$Html$Attributes$srcdoc('<iframe width=\'available\' height=\'available\' src=\'https://www.youtube.com/embed/RxjLwsbTzMc\' frameborder=\'0\' allow=\'accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\' allowfullscreen></iframe>')
+				$elm$html$Html$Attributes$srcdoc('<iframe width=\'643\' height=\'380\' margin=\'0\' padding=\'0\' content=\'0\' border=\'0\' src=\'https://www.youtube.com/embed/RxjLwsbTzMc\' frameborder=\'0\' ></iframe>')
 			]),
 		_List_Nil));
 var $mdgriffith$elm_ui$Element$none = $mdgriffith$elm_ui$Internal$Model$Empty;
@@ -12078,16 +12086,17 @@ var $mdgriffith$elm_ui$Element$paddingEach = function (_v0) {
 				left));
 	}
 };
-var $mdgriffith$elm_ui$Internal$Model$Px = function (a) {
-	return {$: 'Px', a: a};
-};
-var $mdgriffith$elm_ui$Element$px = $mdgriffith$elm_ui$Internal$Model$Px;
 var $author$project$Main$pageContent = function () {
 	var eve = 400;
 	return A2(
 		$mdgriffith$elm_ui$Element$column,
 		_List_fromArray(
-			[$mdgriffith$elm_ui$Element$centerX, $mdgriffith$elm_ui$Element$centerY]),
+			[
+				$mdgriffith$elm_ui$Element$height(
+				A2($mdgriffith$elm_ui$Element$maximum, 1900, $mdgriffith$elm_ui$Element$fill)),
+				$mdgriffith$elm_ui$Element$centerX,
+				$mdgriffith$elm_ui$Element$centerY
+			]),
 		_List_fromArray(
 			[
 				A2(
@@ -12119,7 +12128,7 @@ var $author$project$Main$pageContent = function () {
 						A3($mdgriffith$elm_ui$Element$rgb255, 234, 175, 65)),
 						$mdgriffith$elm_ui$Element$Font$size(45),
 						$mdgriffith$elm_ui$Element$moveUp(30),
-						$mdgriffith$elm_ui$Element$moveRight(200)
+						$mdgriffith$elm_ui$Element$moveRight(196)
 					]),
 				$mdgriffith$elm_ui$Element$text('Türchen')),
 				A2(
@@ -12127,12 +12136,10 @@ var $author$project$Main$pageContent = function () {
 				_List_fromArray(
 					[
 						$mdgriffith$elm_ui$Element$centerX,
-						$mdgriffith$elm_ui$Element$width(
-						$mdgriffith$elm_ui$Element$px(530)),
-						$mdgriffith$elm_ui$Element$height(
-						$mdgriffith$elm_ui$Element$px(895)),
+						$mdgriffith$elm_ui$Element$width($mdgriffith$elm_ui$Element$shrink),
+						$mdgriffith$elm_ui$Element$height($mdgriffith$elm_ui$Element$shrink),
 						$mdgriffith$elm_ui$Element$paddingEach(
-						{bottom: 105, left: 0, right: 0, top: 70})
+						{bottom: 240, left: 0, right: 0, top: 70})
 					]),
 				$author$project$Main$myIframe),
 				A2(
@@ -12144,9 +12151,9 @@ var $author$project$Main$pageContent = function () {
 				$mdgriffith$elm_ui$Element$el,
 				_List_fromArray(
 					[
-						$mdgriffith$elm_ui$Element$centerX,
 						$mdgriffith$elm_ui$Element$height(
-						$mdgriffith$elm_ui$Element$px(eve))
+						A2($mdgriffith$elm_ui$Element$maximum, 400, $mdgriffith$elm_ui$Element$fill)),
+						$mdgriffith$elm_ui$Element$width($mdgriffith$elm_ui$Element$fill)
 					]),
 				$mdgriffith$elm_ui$Element$none)
 			]));
