--- a/index.html
+++ b/index.html
@@ -12030,13 +12030,13 @@ var $author$project$Main$myIframe = $mdgriffith$elm_ui$Element$html(
 			[
 				A2($elm$html$Html$Attributes$style, 'width', 'fill'),
 				A2($elm$html$Html$Attributes$style, 'border-style', 'solid'),
-				A2($elm$html$Html$Attributes$style, 'height', '400'),
-				A2($elm$html$Html$Attributes$style, 'width', '665'),
-				A2($elm$html$Html$Attributes$style, 'patting', '0'),
-				A2($elm$html$Html$Attributes$style, 'margin', '0'),
+				A2($elm$html$Html$Attributes$style, 'height', '300'),
+				A2($elm$html$Html$Attributes$style, 'width', '500'),
+				A2($elm$html$Html$Attributes$style, 'patting', 'auto'),
+				A2($elm$html$Html$Attributes$style, 'margin', 'auto'),
 				A2($elm$html$Html$Attributes$style, 'border', '0'),
 				A2($elm$html$Html$Attributes$style, 'content', '0'),
-				$elm$html$Html$Attributes$srcdoc('<iframe width=\'643\' height=\'380\' margin=\'0\' padding=\'0\' content=\'0\' border=\'0\' src=\'https://www.youtube.com/embed/RxjLwsbTzMc\' frameborder=\'0\' ></iframe>')
+				$elm$html$Html$Attributes$srcdoc('<iframe padding=\'0px\' margin=\'0px\' border=\'0px\' content=\'0px\' frameborder=\'0\' width=\'400\' height=\'200\' src=\'https://drive.google.com/file/d/1xVmI8J9FiHTzMyVgNKKojPHJ8yXb3sod/preview\'> </iframe>')
 			]),
 		_List_Nil));
 var $mdgriffith$elm_ui$Element$none = $mdgriffith$elm_ui$Internal$Model$Empty;
@@ -12136,8 +12136,6 @@ var $author$project$Main$pageContent = function () {
 				_List_fromArray(
 					[
 						$mdgriffith$elm_ui$Element$centerX,
-						$mdgriffith$elm_ui$Element$width($mdgriffith$elm_ui$Element$shrink),
-						$mdgriffith$elm_ui$Element$height($mdgriffith$elm_ui$Element$shrink),
 						$mdgriffith$elm_ui$Element$paddingEach(
 						{bottom: 240, left: 0, right: 0, top: 70})
 					]),
